--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "bundle": "rollup -c --environment INCLUDE_DEPS,BUILD:production",
     "tsc": "tsc --emitDeclarationOnly --outDir dist",
-    "build": "npm run tsc && npm run bundle"
+    "build": "npm run tsc && npm run bundle",
+    "test-types": "tsc --noEmit"
   },
   "types": "./dist/index.d.ts",
   "files": [
@@ -37,18 +38,17 @@
     "@babel/preset-env": "7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "7.3.3",
+    "@types/react": "^16.3.0",
     "rollup": "1.4.0",
     "rollup-plugin-babel": "4.3.2",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-uglify": "6.0.2",
-    "typescript": "3.3.3333",
-    "@types/react": "^16.3.0"
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
     "react": "^16.3.0"
   },
   "dependencies": {
-    "smooth-dnd": "0.12.1",
-    "prop-types":">=15.6.0"
+    "smooth-dnd": "github:wilsonpage/smooth-dnd#master"
   }
 }
